fix some JUnits Tests